fixed color contrast issue

--- a/less/talk.less
+++ b/less/talk.less
@@ -14,8 +14,9 @@
 @inverted-foreground-color: #fff;
 @inverted-background-color: #00aeef;
 
+@esdc-dark-blue: #0f2a4a;
 @esdc-cyan-text: #0068AE;
-@default-message-background: #6e6e7de6;
+@default-message-background: #d6d6dae6;
 
 #wrapper {
   overflow: hidden;
@@ -65,17 +66,17 @@
         .talk__chat__message {
           text-align: right;
           position: relative;
-          background-color: @adapt-topbar-color;
+          background-color: @esdc-dark-blue;
           color: @white;
           border-radius: 1rem;
-          border: 2px solid @adapt-topbar-color;
+          border: 2px solid @esdc-dark-blue;
           padding: 1rem;
           width: 100%;
         }
 
         .talk__character__image-container {
           border-radius: 50%;
-          border: 4px solid @adapt-topbar-color;
+          border: 4px solid @esdc-dark-blue;
           background-color: @white;
           margin-bottom: 0.5rem;
           height: 80px;
@@ -122,7 +123,7 @@
   &__chat__message {
     position: relative;
     background-color: @default-message-background;
-    color: @white;
+    color: black;
     border-radius: 1rem;
     border: 2px solid @default-message-background;
     padding: 1rem;
